- Check rawTableQuick for usage with descending values



Version in 0.9.1
================
Date: 2018.08.16

Changes:
-------
- Added predictRawBC and predictNormBC for computing norm and raw values based on the parametric
  box cox power function parameters
- New contributor: Sebastian Gary, welcome to the team!



Version in 0.9.0
================
Date: 2018.08.14

Changes:
-------
- Box Cox power transformation for regression model at specific age: optional parametric modelling
  for non-paramteric regression model



Version in 0.8.9
================
Date: 2018.08.13

Changes:
-------
- Convenience method for selection best model added: 'printSubset'
- predictNormValue now accepts lists of values as well



Version in 0.8.8
================
Date: 2018.08.12

Changes:
-------
- parameter checks added
- new parameter 'descriptives' addad to rankByGroup and rankBySlidingWindow added
  to retrieve descriptive statistics for each observation
- improvements in the documentation
- errors in bestModel and plotPercentiles corrected, when variable names are not
  as in example sample



Version in 0.8.6
================
Date: 2018.08.11

Changes:
-------
- new function: 'rankBySlidingWindow' which can be used for data sets with continuous age variables
- error corrected for data being loaded from SPSS files
- improvements in the documentation



Version in 0.8.5
================
Date: 2018.08.06

Changes:
-------
- new function for simulating data



Version in 0.8.3
================
Date: 2018.08.03

Changes:
-------
- Code cleaning and formatting



Version in 0.8.2
================
Date: 2018.08.02

Changes:
-------
- new internal function: rawTableQuick for speeding up generating norm tables
  Still has to be checked for working with descending values.
  Works only, if model assumptions are valid



Version in 0.8.0
================
Date: 2018.08.01

Changes:
-------
- new function: rawTable allows creating norm tables with assignment of raw -> norm values